# brickkit

./: .gitignore  README.md  pyproject.toml
brickkit/: __init__.py  __main__.py  brick.py  config.py  discover.py  registry.py
brickkit/bricks/: __init__.py
brickkit/bricks/ocr/: interface.py
brickkit/bricks/ocr/plugins/: cloud.py  synthetic.py  tesseract.py
brickkit/bricks/source/: interface.py
brickkit/bricks/source/plugins/: email.py  s3.py
brickkit/bricks/validate/: config_model.py
brickkit/bricks/writeout/: __init__.py  engine.py
bricks/extract/: config_model.py
bricks/ocr/: __init__.py  config_model.py  registry.py
bricks/ocr/plugins/: __init__.py
bricks/source/: __init__.py  config_model.py  registry.py
bricks/source/plugins/: __init__.py  folder.py
bricks/validate/: __init__.py  engine.py
bricks/writeout/: config_model.py
docs/: CONVENTION.md
templates/client/: README.md  config.yaml  main.py
tests/: _harness.py  test_brickctl.py  test_extract.py  test_framework.py  test_proof_ab.py  test_source_ocr.py  test_validate_writeout.py
tests/demo_bricks/echo/: __init__.py
tests/demo_bricks/textcase/: __init__.py
tools/: brickctl.py  check_ocr.py
